adding apex test

--- a/force-app/main/default/classes/FitnessTest.cls
+++ b/force-app/main/default/classes/FitnessTest.cls
@@ -11,7 +11,7 @@ public class FitnessTest {
         Decimal bmi2 = chamaClasse.calculateBMI(-55,158);
         
         System.debug('Pace :'+ pace.setScale(5));
-        System.assertEquals(10.28571, pace, 'Não deu certo o Equals do pace');
+        System.assertEquals(10.28571, pace, 'Não deu certo o Equals do pace2');
         
         System.debug('Pace2 :'+ pace2.setScale(5));
         System.assertEquals(0.0000, pace2, 'Não deu certo o Equals do pace2');
