adding new apex

--- a/force-app/main/default/classes/DividirConta.cls
+++ b/force-app/main/default/classes/DividirConta.cls
@@ -10,7 +10,7 @@ public class DividirConta {
         Integer duasOuTres = 7; //para consumo de 2 ou 3.
         Integer quatroFatias = 6; //para consumo de +3.
         
-        //Utilizando if - else para imprimir pedaços quando for >0 e !=1, ou pedaço quando foi 1 ou 0
+        //Utilizando if - else para imprimir pedaços quando for >0 e !=1, ou pedaço quando foi 1 ou 0 test
         if ((numeroPedacos!=1)&&(numeroPedacos >0)){
             //Ternary operator
             contaPessoa = (numeroPedacos>=4) ? (numeroPedacos*quatroFatias) : (numeroPedacos*duasOuTres);  
