--- a/force-app/main/default/classes/Empresa.cls
+++ b/force-app/main/default/classes/Empresa.cls
@@ -18,7 +18,7 @@ public class Empresa {
         }   
     }
     
-    // Classe privada que vai armazenar o dado dos clientes.
+    // Classe privada que vai armazenar o dado dos clientes. test
     private class Client{
         Public String clientName;
         Public String webSite;
