--- a/force-app/main/default/classes/EmpresaTest.cls
+++ b/force-app/main/default/classes/EmpresaTest.cls
@@ -3,7 +3,7 @@ public class EmpresaTest {
     
     @isTest
     public Static void chamaMetodo(){
-        
+        //test
         Empresa chamaClasse = new Empresa();
         chamaClasse.adicionarCliente('Joao','joao.com.br','joao@gmail.com',1316516156L);
         chamaClasse.imprimeTodosClientes();        
