--- a/force-app/main/default/classes/AccountController.cls
+++ b/force-app/main/default/classes/AccountController.cls
@@ -11,7 +11,7 @@ public class AccountController {
     public Static List<Account> getAllAccounts(){
         List<Account> contas = [SELECT Name, Phone FROM Account];
         return contas;
-    }
+    }//teste Feature7
     
     public void printAllAccounts(){
         List<Account> printAll = getAllAccounts();
