--- a/force-app/main/default/classes/Empresa.cls
+++ b/force-app/main/default/classes/Empresa.cls
@@ -20,6 +20,7 @@ public class Empresa {
     
     // Classe privada que vai armazenar o dado dos clientes. test
     // Change FROM Feature2
+    // change from Feature8
     private class Client{
         Public String clientName;
         Public String webSite;
